# lyceum

./: .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml  HOMEPAGE.md  LYCEUM.md  README.md
examples/: consolidation.md  note.md  sample.md  themes.md
kernel/: CLAUDE.md  PRINCIPLES.md  README.md  RESEARCH.md  demo.html  index-shell.html  package-lock.json  package.json  theme.css
src/: bundle.rs  frontmatter.rs  index.rs  library.rs  main.rs  registry.rs  render.rs  serve.rs  sync.rs
