[package]
name = "lyceum"
version = "0.1.0"
edition = "2021"
description = "A personal, LLM-maintained wiki. v0: the writeup renderer."

[dependencies]
pulldown-cmark = "0.13"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Minimal blocking HTTP server for `lyceum serve`. File-watching is done
# by mtime polling rather than a `notify` dependency — the watch set is
# tiny and polling keeps the dependency surface small.
tiny_http = "0.12"

[profile.release]
opt-level = 3
